# Hyperchain

./: .gitignore  .gitmodules  .project  Cargo.toml  Untitled.ipynb  go.mod  known_nodes.json  test_coverage.sh
.github/workflows/: rust.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
blockchain/: block.go  blockchain.go  blockchain_test.go  target.go  transaction.go  wallet.go
blockchain/transaction/: binary.go  builder.go  page.go  transaction.go  transfer.go  wallet.go
blockchain/wallet/: address.go  binary.go  wallet.go
cli/: Cargo.toml  main.go
cli/src/: main.rs
docs/: block_layout  progress.md
explorer/: Cargo.toml
explorer/src/: block.rs  index.rs  main.rs  site.rs  transaction.rs  wallet.rs
explorer/static/root/: index.html  style.css
explorer/static/templates/: block.html  index.html  transaction-data.html  transaction.html  wallet.html
lib/: Cargo.toml  N4L8.wallet  other.wallet
lib/src/: client.rs  command.rs  config.rs  error.rs  hash.rs  lib.rs  merkle_tree.rs  miner.rs  page.rs  server.rs  transaction.rs  transaction_queue.rs
lib/src/block/: builder.rs  mod.rs  target.rs  transactions.rs  validate.rs
lib/src/chain/: branch.rs  metadata.rs  mod.rs  storage.rs  transaction_queue.rs  transactions.rs
lib/src/data_store/: data_unit.rs  mod.rs  page.rs
lib/src/service/: client.rs  command.rs  mod.rs  server.rs
lib/src/transaction/: builder.rs  mod.rs  page.rs  transfer.rs
lib/src/wallet/: mod.rs  private_wallet.rs  public_wallet.rs
node/: branch.go  command.go  ipc.go  miner.go  network.go  node.go  packet.go
server/: main.go
service/: .gitignore  Cargo.toml  test_coverage.sh
service/blockchain/: blk0  metadata.json
service/blockchain/metadata/: blk0
service/src/: balance.rs  block_builder.rs  blocks.rs  error.rs  main.rs  miner.rs  page.rs  report.rs  send.rs  statistics.rs  transaction.rs  transaction_history.rs  transaction_info.rs  update_page.rs
service/src/block/: mod.rs  validate.rs
service/src/chain/: mod.rs
service/src/network/: client.rs  client_manager.rs  mod.rs  node_discovery.rs  packet.rs  report_manager.rs  server.rs
service/src/node/: connection.rs  manager.rs  mod.rs  network.rs  packet_handler.rs
service/src/service/: miner.rs  mod.rs
service/src/wallet/: mod.rs  private_wallet.rs  public_wallet.rs
src/: error.rs  logger.rs  main.rs  miner.rs  page.rs  transaction.rs  wallet.rs
src/block/: chain.rs  mod.rs  page.rs  target.rs  transaction.rs  transactions.rs  validate.rs
src/block/chain/: block_buffer.rs  block_storage.rs  branch.rs  chunk.rs  main_branch.rs  mod.rs  prune.rs  sub_branch.rs  sub_chain.rs
src/block/chain/branch/: add.rs  mod.rs  validate.rs
src/block/chain/chunk/: main_chunk.rs  mod.rs  sub_chunk.rs
src/chain/: mod.rs  prune.rs
src/chain/branch/: add.rs  merge.rs  mod.rs  prune.rs  validate.rs
src/node/: broadcast.rs  mod.rs  network.rs
src/node/command/: balance.rs  mod.rs  page.rs  transaction.rs
src/wallet/: mod.rs  private_wallet.rs  public_wallet.rs
web/: block.go  index.go  web.go
web/static/: style.css
web/templates/: block.html  index.html  transaction-data.html  transaction.html
