[package]
name = "decentralized-web"
version = "0.1.0"
authors = ["BenJilks <benjyjilks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
byteorder = "1.4.3"
slice_as_array = { version = "1.1.0", default-features = false }
rsa = "0.4.0"
rand = "0.8.3"
