[package]
name = "hyperchain-explorer"
version = "0.2.0"
edition = "2018"

[dependencies]
libhyperchain = { path = "../lib" }
handlebars = { version = "3.0.0", features = ["dir_source"] }
actix-web = "3.3.2"
actix-files = "0.3"
serde = "1.0"
serde_json = "1.0"
base-62 = { git = "https://github.com/kryptco/base62.rs" }
pretty_env_logger = "0.4.0"
log = "0.4.14"

