[package]
name = "libhyperchain"
version = "0.2.0"
edition = "2018"

[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde-big-array = "0.3.2"
serde_json = "1.0.59"
tcp-channel = "0.3.2"
sha2 = "0.9.3"
slice_as_array = { version = "1.1.0", default-features = false }
bincode = "1.3.2"
base-62 = { git = "https://github.com/kryptco/base62.rs" }
rsa = "0.4.0"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"

