[package]
name = "hyperchain-service"
version = "0.1.0"
authors = ["BenJilks <benjyjilks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhyperchain = { path = "../lib" }
tcp-channel = "0.3.2"
serde = { version = "1.0.125", features = ["derive"] }
slice_as_array = { version = "1.1.0", default-features = false }
clap = "2.33.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
