[package]
name = "hyperchain-service"
version = "0.2.0"
authors = ["BenJilks <benjyjilks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhyperchain = { path = "../lib" }
tcp-channel = "0.3.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.59"
clap = "2.33.3"
rand = "0.8.3"
log = "0.4.14"
pretty_env_logger = "0.4.0"
base-62 = { git = "https://github.com/kryptco/base62.rs" }

